# Neural-Machine-Translation-System

./: .gitignore  README.md  app.py  config.yml  notebook.ipynb  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: deploy.yml
docs/errors/: module_not_found_src_layout.md  setuptools_backends_legacy.md
notebook/: notebook.ipynb
src/: languages.py  model.py  notebook.ipynb
src/ai_translator/: __init__.py  evaluate.py  languages.py  model.py  speech.py  translate.py
tests/: test_languages.py  test_translate.py
